syntax = "proto3";
package chipmunkApi;
option go_package = "github.com/h-varmazyar/Gate/services/chipmunk/api";
import "api/src/misc.proto";

service AssetService {
  rpc Set(Asset) returns (api.Void);
  rpc Get(GetAssetRequest) returns (Asset);
  rpc List(GetAssetListRequest) returns (Assets);
}

message Asset {
  // @inject_tag: json:"id"
  string ID = 1;
  // @inject_tag: json:"name"
  string Name = 2;
  // @inject_tag: json:"symbol"
  string Symbol = 3;
  // @inject_tag: json:"issue_date"
  int64 IssueDate = 4;
  // @inject_tag: json:"created_at"
  int64 CreatedAt = 5;
  // @inject_tag: json:"updated_at"
  int64 UpdatedAt = 6;
}

message Assets {
  // @inject_tag: json:"elements"
  repeated Asset Elements = 1;
}

message GetAssetRequest {
  // @inject_tag: json:"name"
  string Name = 1;
}

message GetAssetListRequest {
  // @inject_tag: json:"page"
  int32 Page = 1;
}